Bookers Destroy 終了

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "resolutions": {
     "glob": "^7.2.3",
-    "minimatch":"9.0.5"
+    "minimatch": "9.0.5"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  }
 }
